# dicgen

./: Cargo.toml  README.md
benches/: bench.rs
src/: error.rs  lib.rs  main.rs
