[package]
name = "dicgen"
description = "Generate a list with all combinations for given characters, like in brute force attacks"
version = "0.1.0"
license = "Unlicense"
authors = ["Jesus Hernandez <jesushdez@protonmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/jhg/dicgen"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
indicatif = "0.17.2"

[profile.release]
strip = "symbols"
lto = true
opt-level = 3
