[package]
name = "dicgen"
description = "Generate a list with all combinations for given characters, like in brute force attacks"
version = "0.4.8"
license = "Unlicense"
categories = ["command-line-utilities"]
keywords = ["dictionary", "brute-force", "cybersecurity", "security", "pentesting"]
authors = ["Jesus Hernandez <jesushdez@protonmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/jhg/dicgen"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
indicatif = "0.17.11"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
